src/components/Themes/Themes.css
.theme-dark {
  --text-color: #eee;
  --background-color-1: #606c88;
  --background-color-2: #3f4c6b;
  --background-slider: #3b3b3b;
  --border-color: #ddd;
  --button-color: #1864a7;
  --button-action-color: #194c79;
}
.theme-light {
  --text-color: #222;
  --background-color-1: #6190e8;
  --background-color-2: #a7bfe8;
  --background-slider: #2196f3;
  --border-color: #666;
  --button-color: #5468ff;
  --button-action-color: #3c4fe0;
}
.theme-switch-wrapper {
  width: 100px;
  display: flex;
  align-items: center;
  padding: 2rem 0;
  justify-content: space-between;
  font-size: 2.4rem;
  color: var(--text-color);
  line-height: 2.4rem;
  margin: 1rem;

  @media only screen and (max-width: 37.5em) {
    font-size: 2rem;
    padding: 0 0 2rem 0;
  }
}
.switch {
  position: relative;
  display: inline-block;
  width: 75px;
  height: 2.4rem;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: '';
  height: 2rem;
  width: 2rem;
  left: 4px;
  bottom: 3px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: var(--background-slider);
}

input:focus + .slider {
  box-shadow: 0 0 1px var(--background-slider);
}

input:checked + .slider:before {
  -webkit-transform: translateX(35px);
  -ms-transform: translateX(35px);
  transform: translateX(35px);
}

.slider.round {
  border-radius: 2.4rem;
}

.slider.round:before {
  border-radius: 50%;
}

